# ugreg

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
binextrond/: extrond.json  extrond.lua  smp351.lua  smpdef.json
binmaiden/: example_ldap.json  example_ldap2.sh.bat  m_identity.json  m_search.json  m_wellknown.json  maiden.json  maiden_wellknown.json  wellknown.json
binmaiden/scripts/: ldap.py  ldap.py.bat  mod_ldap.py
binpiggyback/: piggyback.json
cmake/: BuildType.cmake  FindMbedTLS.cmake  utility.cmake
dep/: CMakeLists.txt  ascon-sponge.h  external_log_access.inl  external_mg_cry_internal_impl.inl  fts_fuzzy_match.h  impls.cpp  luaalloc.c  luaalloc.h  safe_numerics.h  strpool.h  upgrade_mutex.h
dep/brotli/: CMakeLists.txt
dep/civetweb/: civetweb.c  mod_mbedtls.inl
dep/lua/: CMakeLists.txt
dep/tomcrypt/: CMakeLists.txt  base64_encode.c  tomcrypt.h  tomcrypt_misc.h
doc/: extrond.txt  plan.graphml
src/: CMakeLists.txt  accessor.h  cachetable.h  config.cpp  config.h  datatree.cpp  datatree.h  handler_get.cpp  handler_get.h  json_in.cpp  json_in.h  json_out.cpp  json_out.h  jsonstreamwrapper.cpp  jsonstreamwrapper.h  main.cpp  mem.h  query.h  refcounted.h  request.cpp  request.h  socketstream.cpp  subproc.cpp  subproc.h  teststuff.cpp  teststuff.h  treefunc.cpp  treefunc.h  treeiter.h  treemem.cpp  treemem.h  types.h  util.cpp  util.h  variant.cpp  variant.h  viewengine.cpp  webserver.cpp  zstream.cpp  zstream.h
src/base/: CMakeLists.txt  accessor.cpp  accessor.h  bj.cpp  bj.h  co.cpp  co.h  containers.cpp  containers.h  datatree.cpp  datatree.h  debugfunc.cpp  debugfunc.h  env.cpp  env.h  fetcher.cpp  fetcher.h  json_in.cpp  json_in.h  json_out.cpp  json_out.h  jsonstreamwrapper.cpp  jsonstreamwrapper.h  log.cpp  log.h  luafuncs.cpp  luafuncs.h  mem.cpp  mem.h  mt.cpp  mt.h  osfunc.cpp  osfunc.h  pathiter.cpp  pathiter.h  rng.cpp  rng.h  scopetimer.h  serialize.cpp  serialize.h  (+32 more)
src/extrond/: CMakeLists.txt  handler_ctrl.cpp  handler_ctrl.h  handler_status.cpp  handler_status.h  main.cpp  sisaction.cpp  sisaction.h  sisclient.cpp  sisclient.h  sisdevice.cpp  sisdevice.h  sisluafunc.cpp  sisluafunc.h  sissocket.cpp  sissocket.h
src/maiden/: CMakeLists.txt  README.md  handler_mxid_v2.cpp  handler_mxid_v2.h  main.cpp  mxdefines.cpp  mxdefines.h  mxhttprequest.cpp  mxhttprequest.h  mxresolv.cpp  mxresolv.h  mxsearch.cpp  mxsearch.h  mxsearchalgo.cpp  mxsearchalgo.h  mxservices.cpp  mxservices.h  mxsources.cpp  mxsources.h  mxstore.cpp  mxstore.h  mxtoken.cpp  mxtoken.h  mxvirtual.h
src/piggyback/: CMakeLists.txt  handler_fwd.cpp  handler_fwd.h  main.cpp
src/server/: CMakeLists.txt  brstream.cpp  brstream.h  cachetable.h  config.cpp  config.h  fetcher.cpp  fetcher.h  handler.h  handler_debug.cpp  handler_debug.h  handler_get.cpp  handler_get.h  handler_view.cpp  handler_view.h  handlers.h  main.cpp  request.cpp  request.h  responseformat.cpp  responseformat.h  serverutil.cpp  serverutil.h  socketstream.cpp  socketstream.h  treefunc.cpp  webserver.cpp  webserver.h  zstream.cpp  zstream.h
src/test/: CMakeLists.txt  testbase.cpp  testbj.cpp  testbjfuzz.cpp  testcontainer.cpp  testparser.cpp  teststuff.cpp  teststuff.h
src/ugreg/: CMakeLists.txt  handler_debug.cpp  handler_get.cpp  handler_view.cpp  main.cpp
src/view/: CMakeLists.txt  parser.cpp  parser.h  view.cpp  view.h  viewexec.cpp  viewexec.h  viewmgr.cpp  viewparser.cpp  viewparser.h  viewxform.cpp  viewxform.h
