include_directories(.)
include_directories(base)
include_directories(server)

option(BUILD_UGREG "Build ugreg (json aggregator)?" FALSE)
option(BUILD_EXTROND "Build extrond (extron control daemon)?" FALSE)
option(BUILD_MAIDEN "Build maiden (matrix identity server)?" TRUE)
option(BUILD_TESTS "Build test files?" FALSE)

add_subdirectory(base)
add_subdirectory(server)

if(BUILD_UGREG)
    add_subdirectory(ugreg)
endif()
if(BUILD_EXTROND)
    add_subdirectory(extrond)
endif()
if(BUILD_MAIDEN)
    add_subdirectory(maiden)
endif()
if(BUILD_TESTS)
  add_subdirectory(test)
endif()
