set(src
    types.h
    datatree.cpp
    datatree.h
    util.cpp
    util.h
    variant.cpp
    variant.h
    json_in.cpp
    json_in.h
    json_out.cpp
    json_out.h
    accessor.cpp
    accessor.h
    treeiter.h
    jsonstreamwrapper.cpp
    jsonstreamwrapper.h
    treemem.cpp
    treemem.h
    mem.h
    mem.cpp
    refcounted.h
    debugfunc.cpp
    debugfunc.h
    tinyhashmap.cpp
    tinyhashmap.h
    containers.h
    containers.cpp
)

add_library(base ${src})
