set(src
    types.h
    datatree.cpp
    datatree.h
    util.cpp
    util.h
    variant.cpp
    variant.h
    json_in.cpp
    json_in.h
    json_out.cpp
    json_out.h
    accessor.cpp
    accessor.h
    treeiter.h
    jsonstreamwrapper.cpp
    jsonstreamwrapper.h
    treemem.cpp
    treemem.h
    mem.h
    mem.cpp
    refcounted.h
    debugfunc.cpp
    debugfunc.h
    tinyhashmap.cpp
    tinyhashmap.h
    containers.h
    containers.cpp
    subproc.cpp
    subproc.h
    treefunc.cpp
    treefunc.h
    env.cpp
    env.h
    pathiter.cpp
    pathiter.h
    viewparser.cpp
    viewparser.h
    viewexec.cpp
    viewexec.h
    view.cpp
    view.h
    viewmgr.cpp
    viewmgr.h
    viewxform.cpp
    viewxform.h
    fetcher.cpp
    fetcher.h
    co.cpp
    co.h
    mt.cpp
    mt.h
    luafuncs.cpp
    luafuncs.h
    rng.cpp
    rng.h
    scopetimer.h
    webstuff.cpp
    webstuff.h
    bj.cpp
    bj.h
    osfunc.cpp
    osfunc.h
)

add_library(base ${src})
target_link_libraries(base lua)
